# pdns

./: .travis.yml  Dockerfile
build-scripts/: travis.sh
modules/dlsobackend/: Makefile.am  dlsobackend.cc  dlsobackend.hh  dlsobackend_api.h
modules/gsqlite3backend/: gsqlite3backend.cc
regression-tests/backends/: common  dlso-master
regression-tests/modules/dlso-gsql/: Makefile.am  dlso-gsql.cc  dlsogsql.cc
